<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/b7_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/b7_name"
        android:text="小志"/>
    
    <EditText 
        android:id="@+id/b7_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/b7_password"/>
    
    <Button 
        android:id="@+id/b7_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b7_login"/>

</LinearLayout>
